--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                 <div class="row">
                     <div class="background" id="mountain">
                         <figure>
-                            <img src="./img/section-1 img.webp" alt="mountain">
+                            <img src="./img/section-1-img.webp" alt="mountain">
                         </figure>
                     </div>
                     <div class="background" id="man" data-aos="fade-up" data-aos-duration="500" data-aos-offset="100">
                         <figure>
-                            <img src="./img/section-2 img.webp" alt="man-standing">
+                            <img src="./img/section-2-img.webp" alt="man-standing">
                         </figure>
                     </div>
                     <div class="social-media">
